refactor: Dragon Agent 企业级规范化重构
后端：
- Spring Boot 4.0.6 + Spring AI 2.0.0-M8 标准分层架构
- Spring Security WebFlux 认证（注册/登录/退出）+ BCrypt 密码加密
- JPA Entity + Repository（UserEntity、ConversationEntity）
- 多用户会话隔离，JdbcChatMemory 消息持久化
- application.yaml 拆分为 base + dev + prod 三 profile
- CORS 配置、数据库密码外置化为环境变量
- 提取 SecurityHelper 消除三处重复代码
- 修复 GlobalExceptionHandler 自身包引用
- 删除 AuthController 死代码
- PasswordEncoder 改为 Bean 注入
- AiService var 改为显式类型

前端：
- React 19 + TypeScript 组件化重构
- 提取 useAuth / useConversation 自定义 Hook
- 提取 MarkdownRenderer 公共组件（消除重复配置）
- 提取 ChevronIcon 共享图标组件
- 新增登录/注册页面
- SSE 标准协议（thinking / content / done）
- 内联样式迁移到 CSS 类，清理死代码和未使用导出
- 修复退出登录重复调用、onKeyDown 命名规范化
- CodeBlock CSS 独立文件
- Vite 代理地址外置化
- index.html 中文标题

文档：
- 更新 README.md 和 USAGE.md 项目结构说明